--- a/ElectronicObserver/WPFEO/WPFMain.xaml
+++ b/ElectronicObserver/WPFEO/WPFMain.xaml
@@ -171,7 +171,7 @@
 					</MenuItem.Icon>
 				</MenuItem>
 				<Separator/>
-				<MenuItem Name="MI_Tools_DropRecord" Header="Drop Record">
+				<MenuItem Name="MI_Tools_DropRecord" Header="Drop Record" Click="MI_Tools_DropRecord_OnClick">
 					<MenuItem.Icon>
 						<Image Source="{StaticResource Icon_Form_DropRecord}"/>
 					</MenuItem.Icon>
