--- a/ElectronicObserver/WPFEO/WPFMain.xaml
+++ b/ElectronicObserver/WPFEO/WPFMain.xaml
@@ -192,7 +192,7 @@
 					</MenuItem.Icon>
 				</MenuItem>
 				<Separator/>
-				<MenuItem Name="MI_Tools_ShipEncyclopedia" Header="Ship Encyclopedia">
+				<MenuItem Name="MI_Tools_ShipEncyclopedia" Header="Ship Encyclopedia" Click="MI_Tools_ShipEncyclopedia_OnClick">
 					<MenuItem.Icon>
 						<Image Source="{StaticResource Icon_Form_AlbumShip}"/>
 					</MenuItem.Icon>
