--- a/ElectronicObserver/WPFEO/WPFBrowserHost.xaml
+++ b/ElectronicObserver/WPFEO/WPFBrowserHost.xaml
@@ -5,8 +5,8 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:ElectronicObserver.WPFEO"
              mc:Ignorable="d" 
-             d:DesignHeight="450" d:DesignWidth="800">
-	<Grid Name="Grid_Root">
-		
+             d:DesignHeight="450" d:DesignWidth="800" Loaded="UserControl_Loaded">
+	<Grid>
+		<WindowsFormsHost Name="BrowserDock" SizeChanged="BrowserDock_OnSizeChanged"/>
 	</Grid>
 </UserControl>
