--- a/WPFBrowser/MainWindow.xaml
+++ b/WPFBrowser/MainWindow.xaml
@@ -12,8 +12,7 @@
         Background="{DynamicResource MaterialDesignPaper}"
         FontFamily="{materialDesign:MaterialDesignFont}"
 
-        Height="450" Width="800"
-        Loaded="MainWindow_OnLoaded">
+        Height="450" Width="800" Loaded="Window_Loaded">
 	<Window.CommandBindings>
 		<CommandBinding Command="local:CustomCommands.Screenshot" Executed="MI_Screenshot_OnClick" />
 		<CommandBinding Command="local:CustomCommands.Refresh" Executed="MI_Refresh_OnClick" />
