--- a/ElectronicObserver/WPFEO/Fleet/WPFFleet.xaml
+++ b/ElectronicObserver/WPFEO/Fleet/WPFFleet.xaml
@@ -13,7 +13,7 @@
              FontFamily="{materialDesign:MaterialDesignFont}"
              d:DesignHeight="450" d:DesignWidth="800" Loaded="UserControl_Loaded">
 
-	<Grid>
+	<Grid IsSharedSizeScope="True">
 		<StackPanel Orientation="Vertical">
 			<Grid Background="{DynamicResource MaterialDesignShadowBrush}" Height="30" Width="266" HorizontalAlignment="Left" VerticalAlignment="Top">
 				<StackPanel Orientation="Horizontal" HorizontalAlignment="Left">
