--- a/ElectronicObserver/App.xaml
+++ b/ElectronicObserver/App.xaml
@@ -3,11 +3,15 @@
 			 xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
 			 xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes">
 	<Application.Resources>
+
 		<ResourceDictionary>
 			<ResourceDictionary.MergedDictionaries>
 				<ResourceDictionary Source="pack://application:,,,/ElectronicObserverTheme;component/Theme.xaml" />
 				<ResourceDictionary Source="pack://application:,,,/ElectronicObserver;component/Properties/Icons.xaml"/>
 			</ResourceDictionary.MergedDictionaries>
+
+			<SolidColorBrush x:Key="EOBackground" Color="Black" />
+			<SolidColorBrush x:Key="EOBlue" Color="#268BD2" />
 		</ResourceDictionary>
 	</Application.Resources>
 </Application>
