--- a/WPFBrowser/App.xaml
+++ b/WPFBrowser/App.xaml
@@ -1,8 +1,8 @@
-﻿<Application x:Class="BrowserWPF.App"
+﻿<Application x:Class="WPFBrowser.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
-             xmlns:converter="clr-namespace:BrowserWPF.ExtraBrowser.Converter"
+             xmlns:converter="clr-namespace:WPFBrowser.ExtraBrowser.Converter"
              Startup="App_OnStartup">
 	<Application.Resources>
 		<ResourceDictionary>
