--- a/WPFBrowser/ExtraBrowser/WPFExtraBrowser.xaml
+++ b/WPFBrowser/ExtraBrowser/WPFExtraBrowser.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="BrowserWPF.ExtraBrowser.WPFExtraBrowser"
+﻿<Window x:Class="WPFBrowser.ExtraBrowser.WPFExtraBrowser"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:wpf="clr-namespace:CefSharp.Wpf;assembly=CefSharp.Wpf"
