--- a/WPFBrowser/ExtraBrowser/WPFExtraBrowser.xaml
+++ b/WPFBrowser/ExtraBrowser/WPFExtraBrowser.xaml
@@ -1,10 +1,10 @@
-﻿<Window x:Class="WPFBrowser.ExtraBrowser.WPFExtraBrowser"
+﻿<Window x:Class="Browser.ExtraBrowser.WPFExtraBrowser"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:wpf="clr-namespace:CefSharp.Wpf;assembly=CefSharp.Wpf"
         xmlns:cef="clr-namespace:CefSharp;assembly=CefSharp.Core"
-        xmlns:behaviours="clr-namespace:CefSharp.MinimalExample.Wpf.Behaviours"
         xmlns:i="clr-namespace:System.Windows.Interactivity;assembly=System.Windows.Interactivity"
+        xmlns:behaviours="clr-namespace:Browser.ExtraBrowser.Behaviours"
         Title="{Binding Path=Title, ElementName=Browser, Converter={StaticResource TitleConverter}}"
         WindowState="Normal">
 
