--- a/WPFBrowser/MainWindow.xaml
+++ b/WPFBrowser/MainWindow.xaml
@@ -1,11 +1,11 @@
-﻿<Window x:Class="WPFBrowser.MainWindow"
+﻿<Window x:Class="Browser.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:WPFBrowser"
         xmlns:wpf="clr-namespace:CefSharp.Wpf;assembly=CefSharp.Wpf"
         xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
+        xmlns:local="clr-namespace:Browser"
         mc:Ignorable="d"
 
         TextElement.Foreground="{DynamicResource MaterialDesignBody}"
