--- a/ElectronicObserver/App.xaml
+++ b/ElectronicObserver/App.xaml
@@ -1,7 +1,8 @@
 ﻿<Application x:Class="ElectronicObserver.App"
 			 xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
 			 xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-			 xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes">
+			 xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
+			 xmlns:miscControls="clr-namespace:ElectronicObserver.WPFEO.MiscControls">
 	<Application.Resources>
 
 		<ResourceDictionary>
@@ -12,6 +13,16 @@
 
 			<SolidColorBrush x:Key="EOBackground" Color="Black" />
 			<SolidColorBrush x:Key="EOBlue" Color="#268BD2" />
+
+			<Style TargetType="miscControls:OutlinedTextBlock">
+				<Setter Property="Fill" Value="Gray"/>
+				<Setter Property="Stroke" Value="Black"/>
+				<Setter Property="FontSize" Value="13"/>
+				<Setter Property="StrokeThickness" Value="0"/>
+				<Setter Property="TextAlignment" Value="Center"/>
+				<Setter Property="HorizontalAlignment" Value="Center"/>
+				<Setter Property="VerticalAlignment" Value="Center"/>
+			</Style>
 		</ResourceDictionary>
 	</Application.Resources>
 </Application>
